Klasse QBit weiter definiert mit constructer und make_value, weiterhin in QGate.cpp erste test gemacht. Erstmal alles SDL-zeug auskommentiert zum ausprobieren. Ncoh ein bisschen debuggt

--- a/QGate/QGate.cbp
+++ b/QGate/QGate.cbp
@@ -33,6 +33,7 @@
 		</Compiler>
 		<Unit filename="Buttons.cpp" />
 		<Unit filename="Buttons.hpp" />
+		<Unit filename="GateFunk.hpp" />
 		<Unit filename="Gates.cpp" />
 		<Unit filename="Gates.hpp" />
 		<Unit filename="QBit.cpp" />
